fixed auth scroll problem on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,6 @@
 }
 body {
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #f6f6f6;
 }
